# mlverse

./: README.md
llm-agent/: .gitignore  README.md  groq_llm.py  level_1_agent.py  level_2_agent.py  level_3_agent.py  level_4_agent.py  level_5_agent.py  level_6_tool.py  level_7_tool_retry.py  level_8_pre_post_hook.py  level_9_human_in_loop.py  playground.py  pyproject.toml
llm-agent/mcp_tools/: atlasian_agent.py  filesystem_agent.py  github_agent.py  my_web_server.py  streamable_http_client.py  streamable_http_server.py
llm-agent/tmp/: agent3.db  agents_playground.db
llm-agent/toolkit/: fibonacci.py  hackernews.py  python_tool.py
simplemcp/: claude_provider.py  client.py  notes.txt  ollama_provider.py  pyproject.toml
simplemcp/src/: __init__.py  client.py
simplemcp/src/llm/: __init__.py  claude_provider.py  groq_provider.py  llm_provider.py  llm_provider_factory.py  ollama_provider.py  openai_provider.py
simplemcp/src/server/: notes.txt  notes_server.py
study_buddy/: .dockerignore  .gitignore  DEPLOYMENT-SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  README-docker.md  README.md  deploy.sh  docker-compose.yml  docker-test.sh  init-ollama.sh  main.py  manage_ollama.sh  pyproject.toml  requirements.txt
study_buddy/app/agents/: pdf_agent.py  pdf_agent_v1.py  study_agent.py  url_agent.py  youtube_agent.py
study_buddy/app/embedding/: embedder.py  indexer.py  retriever.py
study_buddy/app/ingestion/: chunker.py  pdf_reader.py
study_buddy/app/utils/: app_utils.py  logger.py  pdf_utils.py
study_buddy/config/: llm_config.py  settings.py
study_buddy/interfaces/api/: api_main.py  main.py  models.py  routes.py
study_buddy/interfaces/cli/: cli_main.py
study_buddy/interfaces/tui/: study_buddy_tui.py  styles.css  tui_main.py
study_buddy/interfaces/web/: web_main.py
study_buddy/tests/: test_pdf_utils.py
study_buddy/tools/: mcp_tool.py
