[project]
name = "llm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.8",
    "chroma>=0.2.0",
    "chromadb>=1.0.12",
    "duckduckgo-search>=3.9.0",
    "fastapi>=0.104.0",
    "fastmcp>=0.1.0",
    "groq>=0.26.0",
    "httpx>=0.28.1",
    "mcp>=1.9.2",
    "numpy>=2.2.6",
    "ollama>=0.1.6",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "rich>=13.6.0",
    "typer>=0.9.0",
    "uvicorn>=0.24.0",
]
