[project]
name = "simplemcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.4",
    "anthropic>=0.52.1",
    "mcp[cli]>=1.9.2",
    "ollama>=0.5.0",
    "openai>=1.82.1",
    "phidata>=2.7.10",
    "python-dotenv>=1.1.0",
]
