[project]
name = "study-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.9",
    "faiss-cpu>=1.11.0",
    "mcp>=1.9.3",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "starlette<0.46.0",
    "streamlit>=1.45.1",
    "textual>=3.3.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
    "chromadb>=1.0.12",
    "groq",
    "sqlalchemy>=2.0.41",
    "cohere>=5.15.0",
    "infinity-client>=0.0.76",
    "lancedb>=0.23.0",
    "tantivy>=0.24.0",
    "pylance>=0.29.0",
    "beautifulsoup4>=4.13.4",
    "youtube-transcript-api>=1.1.0",
    "openai>=1.86.0",
    "pypdf>=5.6.0",
    "pytest>=8.4.0",
]
